# artifact-shelf

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: delete.rs  edit.rs  files.rs  import.rs  lib.rs  main.rs  positions.rs  search.rs  settings.rs  store.rs
src/components/: ArtifactCard.tsx  ArtifactDetail.test.tsx  ArtifactDetail.tsx  ArtifactEditForm.test.tsx  ArtifactEditForm.tsx  ArtifactList.test.tsx  ArtifactList.tsx  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DirectoryTree.test.tsx  DirectoryTree.tsx  FindBar.tsx  HtmlView.test.tsx  HtmlView.tsx  ImportButton.test.tsx  ImportButton.tsx  InboxBar.tsx  LibraryToolbar.test.tsx  LibraryToolbar.tsx  MarkdownView.test.tsx  MarkdownView.tsx  icons.tsx
src/hooks/: useDragDropImport.ts  useFindInIframe.ts  useFindInPage.ts  useInlineEdit.ts  useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts
src/lib/: directory-tree.test.ts  directory-tree.ts  filter.test.ts  filter.ts  find-in-page.ts  format.ts  import-message.test.ts  import-message.ts  library.test.ts  library.ts  read-state.ts  sort.test.ts  sort.ts  toc.test.ts  toc.ts
src/types/: artifact.ts  edit.ts  filter.ts  import.ts  settings.ts
