[package]
name = "artifact-shelf"
version = "0.1.0"
description = "A local-first desktop library for organizing, tagging, and viewing Markdown and HTML artifacts."
authors = ["KITA-DS12"]
edition = "2021"

[lib]
name = "artifact_shelf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
