[package]
name = "yomikura"
version = "0.1.0"
description = "Yomikura — Markdown と HTML の AI 生成物をローカルで整理・閲覧する書庫風デスクトップアプリ"
authors = ["KITA-DS12"]
license = "MIT"
repository = "https://github.com/KITA-DS12/yomikura"
edition = "2021"

[lib]
name = "yomikura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
